--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@emailjs/browser": "^4.4.1",
+    "aos": "^2.3.4",
     "next": "14.2.5",
     "react": "^18",
     "react-dom": "^18",
@@ -19,6 +21,7 @@
     "tw-elements": "^2.0.0"
   },
   "devDependencies": {
+    "@types/aos": "^3.0.7",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
